# bayeux

./: .gitignore  CHANGELOG.md  README.md  bayeux.cabal
.github/workflows/: haskell.yml
app/: FiatLux.pcf  Main.hs  RgbCycle.pcf
app/FiatLux/: Main.hs
data/: Hello.pcf  LedCtrl.pcf  Soc.pcf
exe/: Main.hs
lib/: Bayeux.hs
lib/Bayeux/: Buffer.hs  Cell.hs  Cli.hs  Cpu.hs  Encode.hs  Flow.hs  Led.hs  Mux.hs  Queue.hs  Rgb.hs  RgbCounter.hs  Rtl.hs  Rtlil.hs  Signal.hs  Spi.hs  Uart.hs  Vector.hs  Width.hs
lib/Bayeux/Ice40/: IO.hs  Led.hs  Rgb.hs  Spi.hs  Spram.hs
src/: Bayeux.hs
src/Bayeux/: Cli.hs  Flow.hs  L.hs  Lp.hs  Rtlil.hs  Tableaux.hs
test/: Main.hs
test/Test/Bayeux/: Buffer.hs  Ice40.hs  L.hs  Led.hs  Lp.hs  Rgb.hs  RgbCounter.hs  Rtl.hs  Rtlil.hs  Signal.hs  Uart.hs
test/Test/Bayeux/Ice40/: Led.hs  Rgb.hs  Spram.hs
test/Test/Bayeux/Ice40/Led/golden/: ledCtrl.pretty
test/Test/Bayeux/Ice40/Rgb/golden/: rgbcounter.pretty  rgbcycle.pretty
test/Test/Bayeux/Ice40/Spram/golden/: spram.pretty
test/Test/Bayeux/Led/golden/: ledCtrl.pretty
test/Test/Bayeux/Rgb/golden/: rgbcounter.pretty  rgbcycle.pretty
test/Test/Bayeux/RgbCounter/golden/: rgbcounter.pretty  rgbcycle.pretty
test/Test/Bayeux/Rtlil/: pretty-add.golden  pretty-counter.golden  pretty-fiatLux.golden  pretty-led.golden  pretty-sbRgbaDrv.golden
test/Test/Bayeux/Rtlil/golden/: counter.pretty
test/Test/Bayeux/Uart/golden/: bufEcho.pretty  echo.pretty  hello.pretty  spramReverse.pretty
