cabal-version:      3.0
name:               bayeux
version:            0.1.0.0
homepage:           https://github.com/dopamane/bayeux
license:            MIT
license-file:       LICENSE
author:             dopamane
maintainer:         dwc1295@gmail.com
copyright:          David Cox
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    ghc-options:      -Wall
    exposed-modules:  Bayeux
                    , Bayeux.Cli
                    , Bayeux.Flow
                    , Bayeux.Lp
                    , Bayeux.RgbCounter
                    , Bayeux.Rtlil
                    , Bayeux.Tableaux
    build-depends:    base
                    , containers
                    , megaparsec
                    , mtl
                    , parser-combinators
                    , prettyprinter
                    , shake
                    , text
    hs-source-dirs:   lib
    default-language: Haskell2010

executable bx
    ghc-options:      -Wall
    main-is:          Main.hs
    build-depends:    base
                    , bayeux
                    , optparse-applicative
    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite test
    ghc-options:      -Wall -threaded
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Bayeux.Lp
                    , Test.Bayeux.RgbCounter
                    , Test.Bayeux.Rtlil
    build-depends:    base
                    , bayeux
                    , extra
                    , filepath
                    , hedgehog
                    , megaparsec
                    , prettyprinter
                    , process
                    , tasty
                    , tasty-golden
                    , tasty-hedgehog
                    , tasty-hunit
                    , text
