cabal-version:      3.0
name:               bayeux
version:            0.1.0.0
homepage:           https://github.com/dopamane/bayeux
license:            MIT
license-file:       LICENSE
author:             dopamane
maintainer:         dwc1295@gmail.com
copyright:          David Cox
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-files:         data/**/*.pcf

library
    ghc-options:      -Wall
    exposed-modules:  Bayeux
                    , Bayeux.Buffer
                    , Bayeux.Cell
                    , Bayeux.Cli
                    , Bayeux.Cpu
                    , Bayeux.Encode
                    , Bayeux.Flow
                    , Bayeux.Ice40.IO
                    , Bayeux.Ice40.Led
                    , Bayeux.Ice40.Rgb
                    , Bayeux.Ice40.Spi
                    , Bayeux.Ice40.Spram
                    , Bayeux.Lp
                    , Bayeux.Rtl
                    , Bayeux.Signal
                    , Bayeux.Tableaux
                    , Bayeux.Uart
                    , Bayeux.Width
    other-modules:    Paths_bayeux
    autogen-modules:  Paths_bayeux
    build-depends:    array
                    , async
                    , base
                    , bytestring
                    , containers
                    , filepath
                    , finite-typelits
                    , megaparsec
                    , mtl
                    , parser-combinators
                    , prettyprinter
                    , serialport
                    , shake
                    , text
    hs-source-dirs:   lib
    default-language: Haskell2010

executable bx
    ghc-options:      -Wall
    main-is:          Main.hs
    build-depends:    base
                    , bayeux
                    , optparse-applicative
    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite test
    ghc-options:      -Wall -threaded
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Bayeux.Ice40
                    , Test.Bayeux.Ice40.Led
                    , Test.Bayeux.Ice40.Rgb
                    , Test.Bayeux.Ice40.Spram
                    , Test.Bayeux.Lp
                    , Test.Bayeux.Rtl
                    , Test.Bayeux.Signal
                    , Test.Bayeux.Uart
    build-depends:    array
                    , base
                    , bayeux
                    , extra
                    , filepath
                    , finite-typelits
                    , hedgehog
                    , megaparsec
                    , prettyprinter
                    , process
                    , tasty
                    , tasty-golden
                    , tasty-hedgehog
                    , tasty-hunit
                    , text
